# distributed-computing

./: README.md  computable.py  master.py  model.py  models.py  pyproject.toml  scheduler.py  start.py  utils.py  worker.py  设计说明文档.md
data/: distributed.db
examples/: sample_text.txt
templates/: index.html
uploads/: result_2.txt
uploads/0ba444b2-815d-4a49-bda2-536fae146f82/: user_program.py
uploads/3ec5e2cf-66ad-4846-9189-0dccaa843302/: sum_calculator.py
uploads/5a73309c-d981-411e-8b5e-869e2909ecea/: sample_text.txt  word_count.py
uploads/8f752dca-1902-459d-84f3-67483a1b24b6/: sum_calculator.py
worker-programs/8/: sum_calculator.py
