[project]
name = "distributed-computing"
version = "1.0.0"
description = "仿照Hadoop MapReduce原理实现的简化版分布式计算系统（Python版）"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
